--- a/billetera/src/main/resources/application.properties
+++ b/billetera/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.password=contrasenia1
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 jwt.secret=olaSiSomosSeguro777
+
+emailSettings.enabled = false
+emailSettings.apiKey = ACAPONERTUAPIKEY
+emailSettings.apiBaseUri = https://api.mailgun.net/v3/
+emailSettings.requestUri = tudominio/messages,
+emailSettings.from = ada8vabackend@tudominio,
+emailSettings.domain = tudominio
