--- a/billetera/src/test/java/ar/com/ada/api/billetera/resourses/application.properties
+++ b/billetera/src/test/java/ar/com/ada/api/billetera/resourses/application.properties
@@ -5,3 +5,10 @@ hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.hbm2ddl.auto=create
 
 jwt.secret=olaSiSomosSeguro777
+
+emailSettings.enabled = false
+emailSettings.apiKey = ACAPONERTUAPIKEY
+emailSettings.apiBaseUri = https://api.mailgun.net/v3/
+emailSettings.requestUri = tudominio/messages,
+emailSettings.from = ada8vabackend@tudominio,
+emailSettings.domain = tudominio
