--- a/billetera/pom.xml
+++ b/billetera/pom.xml
@@ -76,6 +76,10 @@
 			<artifactId>unirest-java</artifactId>
 			<version>3.1.02</version>
 		</dependency>
+		<dependency> 
+			<groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-validation</artifactId> 
+		</dependency>
 
 
 		
