--- a/billetera/src/test/java/ar/com/ada/api/billetera/resourses/application.properties
+++ b/billetera/src/test/java/ar/com/ada/api/billetera/resourses/application.properties
@@ -1,14 +1,11 @@
 jdbc.driverClassName=org.h2.Driver
 jdbc.url=jdbc:h2:mem:billetera;DB_CLOSE_DELAY=-1
- 
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.hbm2ddl.auto=create
-
 jwt.secret=olaSiSomosSeguro777
-
-emailSettings.enabled = false
-emailSettings.apiKey = ACAPONERTUAPIKEY
-emailSettings.apiBaseUri = https://api.mailgun.net/v3/
-emailSettings.requestUri = tudominio/messages,
-emailSettings.from = ada8vabackend@tudominio,
-emailSettings.domain = tudominio
+emailSettings.enabled=false
+emailSettings.apiKey=ACAPONERTUAPIKEY
+emailSettings.apiBaseUri=https://api.mailgun.net/v3/
+emailSettings.requestUri=tudominio/messages,
+emailSettings.from=ada8vabackend@tudominio,
+emailSettings.domain=tudominio
