--- a/billetera/src/main/resources/application.properties
+++ b/billetera/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/billetera_virtual?serverTimezone=UTC
 spring.datasource.username=adadb
-spring.datasource.password=contrasenia1
+spring.datasource.password=Contrasenia1
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 jwt.secret=olaSiSomosSeguro777
